--- a/SOURCES/etcd.service
+++ b/SOURCES/etcd.service
@@ -7,10 +7,8 @@ Wants=network-online.target
 [Service]
 Type=notify
 WorkingDirectory=/var/lib/etcd/
-EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
-# set GOMAXPROCS to number of processors
-ExecStart=/bin/bash -c "GOMAXPROCS=$(nproc) /usr/bin/etcd --name=\"${ETCD_NAME}\" --data-dir=\"${ETCD_DATA_DIR}\" --listen-client-urls=\"${ETCD_LISTEN_CLIENT_URLS}\""
+ExecStart=/usr/bin/etcd --config-file=/etc/etcd/etcd.yml
 Restart=on-failure
 LimitNOFILE=65536
 
